--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <button id="operadorAdicionar">+</button>
         <button id="inverter">±</button>
         <button id="tecla0" placeholder="12">0</button>
-        <button id="decimal">,</button>
+        <button id="decimal" title="Clique o botão do meio do mouse para alterar entre ',' ou '.' ">,</button>
         <button id="igual">=</button>
       </div>
     </div>
